--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
 </head>
 <body>
   <div id="container">
-    <div id="vid_container"><div class="grid"><img style= " width: 100%;"  src="img/grid.svg"></div>
+    <div id="vid_container">
         <video id="video" autoplay playsinline></video>
-        <div id="video_overlay"></div>
+        <div id="video_overlay"><div class="grid"><img style= " width: 100%;"  src="img/grid.svg"></div></div>
         
     </div>
     <div id="gui_controls">
