--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
   <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
-  <div id="container"><div class="grid"><img style= " width: 100%;"  src="img/grid.svg"></div>
+  <div id="container">
     <div id="vid_container">
-        <video id="video" autoplay playsinline></video>
+        <video id="video" autoplay playsinline></video><div class="grid"><img style= " width: 100%;"  src="img/grid.svg"></div>
         <div id="video_overlay"></div>
         
     </div>
