--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 </head>
 <body>
   <div id="container">
-    <div id="vid_container">
-        <video id="video" autoplay playsinline></video><div class="grid"><img style= " width: 100%;"  src="img/grid.svg"></div>
+    <div id="vid_container"><div class="grid"><img style= " width: 100%;"  src="img/grid.svg"></div>
+        <video id="video" autoplay playsinline></video>
         <div id="video_overlay"></div>
         
     </div>
