--- a/index.html
+++ b/index.html
@@ -10,11 +10,12 @@
 </head>
 <body>
   <div id="container">
-    <div id="vid_container"><div class="grid"><img style= " width: 100%;"  src="img/grid.svg"></div>
+    <div id="vid_container">
         <video id="video" autoplay playsinline></video>
         <div id="video_overlay"></div>
         
     </div>
+    <div class="grid"><img style= " width: 100%;"  src="img/grid.svg"></div>
     <div id="gui_controls">
         <button id="switchCameraButton" name="switch Camera" type="button" aria-pressed="false"></button>
         <button id="takePhotoButton" name="take Photo" type="button"></button>
