--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <div id="container">
     <div id="vid_container">
         <video id="video" autoplay playsinline></video>
-        <div id="video_overlay"></div>
+        <div id="video_overlay">sdfsdf</div>
         
     </div>
     <div class="grid"><img style= " width: 100%;"  src="img/grid.svg"></div>
