--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <div id="video_overlay">sdfsdf</div>
         
     </div>
-    <div class="grid"><img style= " width: 100%;"  src="img/grid.svg"></div>
+    <img style= " width: 100%;"  src="img/grid.svg">
     <div id="gui_controls">
         <button id="switchCameraButton" name="switch Camera" type="button" aria-pressed="false"></button>
         <button id="takePhotoButton" name="take Photo" type="button"></button>
